[project]
name = "config-server"
version = "0.1.0"
authors = [
    { name = "Anton Ustyuzhanin", email = "antonu17@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "flask>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/*.py",
]
[tool.hatch.build.targets.wheel]
packages = [
  "src",
]

[dependency-groups]
dev = [
    "python-semantic-release>=9.21.1",
    "ruff>=0.11.10",
]
